--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
-    "svelthree": "^0.119.0-5",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
   "dependencies": {
     "gsap": "^3.10.4",
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelthree": "^0.119.0-5"
   }
 }
